[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "food_to_cook"
version = "0.1.0"
description = "Telegram bot for meal planning"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.0.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []

[project.scripts]
bot = "main:main"
